@@ -42,7 +42,6 @@ RMKEY,   "HKLM\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Uninstall", "bzfla
 RMFILE,  "%i\\doc\\README.HTM", "",
 RMFILE,  "%i\\doc\\LICENSE", "",
 RMDIR,   "%i\\doc", "",
-RMFILE,  "%i\\data\\laser.wav", "",
 RMFILE,  "%i\\data\\bbolt.rgb", "",
 RMFILE,  "%i\\data\\bbolt.rgb", "",
 RMFILE,  "%i\\data\\boxwall.rgb", "",
@@ -78,10 +77,17 @@ RMFILE,  "%i\\data\\flag_drop.wav", "",
 RMFILE,  "%i\\data\\flag_grab.wav", "",
 RMFILE,  "%i\\data\\flag_lost.wav", "",
 RMFILE,  "%i\\data\\flag_won.wav", "",
+RMFILE,  "%i\\data\\jump.wav", "",
+RMFILE,  "%i\\data\\killteam.wav", "",
+RMFILE,  "%i\\data\\land.wav", "",
 RMFILE,  "%i\\data\\laser.wav", "",
+RMFILE,  "%i\\data\\lock.wav", "",
+RMFILE,  "%i\\data\\missile.wav", "",
+RMFILE,  "%i\\data\\phantom.wav", "",
 RMFILE,  "%i\\data\\pop.wav", "",
 RMFILE,  "%i\\data\\ricochet.wav", "",
 RMFILE,  "%i\\data\\shock.wav", "",
+RMFILE,  "%i\\data\\teamgrab.wav", "",
 RMFILE,  "%i\\data\\teleport.wav", "",
 RMDIR,   "%i\\data", "",
 RMLINK,  "bzflag", "",
