@@ -2,6 +2,7 @@
 			     BZFlag release notes
 
 * add new updates here without heading until a release
+* teamgrab.wav - Dave Brosius
 * improved texture mapping - unknown
 * possible win32 installer bug - Chris Walters
 * gcc 3.1+ patches - David Trowbridge
